WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121437
Destroying a Document's render tree shouldn't make it impossible to recreate.
https://bugs.webkit.org/show_bug.cgi?id=121437
Summary
Destroying a Document's render tree shouldn't make it impossible to recreate.
Andreas Kling
Reported
2013-09-16 09:22:34 PDT
Destroying a Document's render tree shouldn't make it impossible to recreate.
Attachments
Patch
(4.10 KB, patch)
2013-09-16 09:25 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-16 09:25:16 PDT
Created
attachment 211800
[details]
Patch
Andreas Kling
Comment 2
2013-09-16 10:06:24 PDT
Committed
r155874
: <
http://trac.webkit.org/changeset/155874
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug