Destroying a Document's render tree shouldn't make it impossible to recreate. <https://webkit.org/b/121437>

Reviewed by Antti Koivisto.

Rename Document::detach() to destroyRenderTree() and stop automatically
disconnecting Document from its Frame after the deforestation.

Added Document::disconnectFromFrame() and do that after every call to
destroyRenderTree() that we currently have.

This change doesn't alter any behavior on its own, but is a step towards
being able to destroy and rebuild the render tree.

Canonical link: https://commits.webkit.org/139412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155874 268f45cc-cd09-0410-ab3c-d52691b4dbfc